adjust test coverage ratios